--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "passport": "^0.3.2",
     "passport-facebook-token": "^3.3.0",
     "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "bluebird": "^3.5.0",
+    "chalk": "^1.1.3",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.4"
   }
 }
