--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/language": "^0.10.3",
+    "@google-cloud/vision": "^0.11.2",
     "cheerio": "^0.22.0",
     "fbgraph": "^1.4.1",
     "instagram-screen-scrape": "^2.0.0",
